--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Tic-Tac-Toe</string>
     <string name="exit">Exit</string>
+    <string name="connect_with_us_on">Connect with us on</string>
+    <string name="are_you_sure_you_to_exit_this_app">Are you sure you want to exit this app ?</string>
 </resources>
